--- a/exercises/04-Replicate-simple-form/index.html
+++ b/exercises/04-Replicate-simple-form/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width">
-<title>4Geeks Academy</title>
-</head>
-<body>
-<form>
-<!-- your code here -->
-</form>
-</body>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width" />
+		<title>4Geeks Academy</title>
+	</head>
+	<body>
+		<form>
+			<!-- your code here -->
+			<table>
+				<tr>
+					<th><h5>Name</h5></th>
+					<th><h5>Value</h5></th>
+				</tr>
+				<tr>
+					<th>Name</th>
+					<th><input type="text" /></th>
+				</tr>
+				<tr>
+					<th>Sex</th>
+					<th>
+						<input type="radio" id="male" />
+						<label for="male">Male</label>
+					</th>
+				</tr>
+			</table>
+		</form>
+	</body>
 </html>
